# cxx-bridge

./: Cargo.toml
consumer/: Cargo.toml  build.rs
consumer/include/: header.h
consumer/src/: lib.rs
core/: Cargo.toml  build.rs
core/src/: lib.rs
