[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
cxx = { workspace = true,  optional = true }

[build-dependencies]
cxx-build = { workspace = true, optional = true }

[features]
with_cxx = ["cxx", "cxx-build"]

[[bin]]
name = "bridge"
path = "bin/bridge.rs"
required-features = ["with_cxx"]